Update: correct the service card spacing

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -256,6 +256,7 @@
   box-shadow: 0 25px 50px rgba(6, 22, 141, 0.0442381);
 
   &-content {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -263,18 +264,21 @@
     background-color: colors.$light;
     border-radius: 0.625rem;
     padding-inline: 1.75rem;
+    padding-block-start: 3.5rem;
     padding-block-end: 2rem;
 
     @media only screen and (min-width: 48rem) {
       padding-inline: 2rem;
+      padding-block: space.$service-t-padding-large space.$service-b-padding-large;
     }
   }
 
   &__img {
+    position: absolute;
+    inset-block-start: -24px;
     display: block;
     width: 3.5rem;
     height: auto;
-    transform: translateY(-1.5rem);
   }
 
   &__title {
@@ -298,6 +302,7 @@
 
     @media only screen and (min-width: 48rem) {
       font-size: fs.$service-text;
+      line-height: 1.56;
     }
   }
 
